--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<artifactId>sjsm</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.0</version>
+	<version>0.1.1-SNAPSHOT</version>
 	<description>A simple java send mail command line application</description>
 	<url>https://github.com/fuinorg/sjsm/</url>
 
