--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,7 +52,7 @@ jobs:
         OSS_SONATYPE_USERNAME: michael-schnell
         OSS_SONATYPE_TOKEN: ${{ secrets.OSS_SONATYPE_TOKEN }}
         OSS_SONATYPE_GPG_PASSPHRASE: ${{ secrets.OSS_SONATYPE_GPG_PASSPHRASE }}
-      run: ./mvnw clean deploy -U -B -P sonatype-oss-release --file pom.xml -s settings.xml
+      run: ./mvnw clean verify -U -B --file pom.xml -s settings.xml
       
     - name: Project properties as ENV variables
       run: |
